Corrects rows in div templates and aligns elements on Basic Page.

--- a/themes/custom/metallic/css/metallic.css
+++ b/themes/custom/metallic/css/metallic.css
@@ -9122,12 +9122,13 @@ th.hide-for-touch {
   text-align: center;
   font-size: 1.2rem;
   padding: 4rem;
+  margin: 2em 0 0 0;
 }
-/* line 7, ../scss/modules/_footer.scss */
+/* line 8, ../scss/modules/_footer.scss */
 .footer p, .footer h4 {
   color: #fff;
 }
-/* line 11, ../scss/modules/_footer.scss */
+/* line 12, ../scss/modules/_footer.scss */
 .footer .inline-list a {
   display: inline-block;
   width: 2rem;
@@ -9140,7 +9141,7 @@ th.hide-for-touch {
   line-height: 35px;
   margin: 0 3px 0 0;
 }
-/* line 24, ../scss/modules/_footer.scss */
+/* line 25, ../scss/modules/_footer.scss */
 .footer .contact {
   list-style-type: none;
   font-size: 1rem;
@@ -9149,15 +9150,15 @@ th.hide-for-touch {
   vertical-align: middle;
   color: #fff;
 }
-/* line 33, ../scss/modules/_footer.scss */
+/* line 34, ../scss/modules/_footer.scss */
 .footer .contact li {
   margin-bottom: 1rem;
 }
-/* line 36, ../scss/modules/_footer.scss */
+/* line 37, ../scss/modules/_footer.scss */
 .footer .contact li p {
   vertical-align: text-bottom;
 }
-/* line 41, ../scss/modules/_footer.scss */
+/* line 42, ../scss/modules/_footer.scss */
 .footer .contact i {
   position: absolute;
   background-color: #33383b;
@@ -9169,19 +9170,19 @@ th.hide-for-touch {
   vertical-align: middle;
   padding: .25em .45em;
 }
-/* line 55, ../scss/modules/_footer.scss */
+/* line 56, ../scss/modules/_footer.scss */
 .footer .copywrite {
   color: #FFF;
   font-size: 0.875rem;
   margin: 0 0 1rem 0;
 }
-/* line 61, ../scss/modules/_footer.scss */
+/* line 62, ../scss/modules/_footer.scss */
 .footer .about {
   color: #92999f;
   font-size: 0.875rem;
   margin: 0 0 1rem 0;
 }
-/* line 67, ../scss/modules/_footer.scss */
+/* line 68, ../scss/modules/_footer.scss */
 .footer .footer-links a {
   list-style: none;
   font-weight: bold;
@@ -9190,42 +9191,42 @@ th.hide-for-touch {
   margin: 0;
   font-size: 1rem;
 }
-/* line 75, ../scss/modules/_footer.scss */
+/* line 76, ../scss/modules/_footer.scss */
 .footer .footer-links a::after {
   content: "•";
   padding: 0 0.2rem 0 0.4rem;
 }
-/* line 80, ../scss/modules/_footer.scss */
+/* line 81, ../scss/modules/_footer.scss */
 .footer .footer-links a:last-child::after {
   content: "";
   padding: 0 0.4rem 0 0.8rem;
 }
 @media only screen and (min-width: 40.063em) {
-  /* line 88, ../scss/modules/_footer.scss */
+  /* line 89, ../scss/modules/_footer.scss */
   .footer p {
     text-align: left;
   }
-  /* line 92, ../scss/modules/_footer.scss */
+  /* line 93, ../scss/modules/_footer.scss */
   .footer .social {
     text-align: left;
     margin: 0;
   }
-  /* line 97, ../scss/modules/_footer.scss */
+  /* line 98, ../scss/modules/_footer.scss */
   .footer .contact {
     text-align: left;
   }
-  /* line 99, ../scss/modules/_footer.scss */
+  /* line 100, ../scss/modules/_footer.scss */
   .footer .contact > i {
     margin-right: 1rem;
   }
 }
 
-/* line 107, ../scss/modules/_footer.scss */
+/* line 108, ../scss/modules/_footer.scss */
 .logo {
   color: #fff;
   font-size: 1.25rem;
 }
-/* line 111, ../scss/modules/_footer.scss */
+/* line 112, ../scss/modules/_footer.scss */
 .logo img {
   margin-right: 0.5rem;
 }
