--- a/themes/custom/metallic/scss/modules/_footer.scss
+++ b/themes/custom/metallic/scss/modules/_footer.scss
@@ -3,6 +3,7 @@
   text-align: center;
   font-size: 1.2rem;
   padding: 4rem;
+  margin: 2em 0 0 0;
   
   p, h4 {
     color: #fff;
